# -1

./: meson.build
src/: Book.cpp  Book.hpp  Publication.cpp  Publication.hpp  main.cpp
src/attrs/: FullName.cpp  FullName.hpp  Lifespan.cpp  Lifespan.hpp
src/book/: Fiction.cpp  Fiction.hpp  Novel.cpp  Novel.hpp  Poem.cpp  Poem.hpp
src/collections/: Array.hpp  LinkedList.hpp
